--- a/docker-compose.deploy.yml
+++ b/docker-compose.deploy.yml
@@ -4,7 +4,7 @@ services:
   backend:
     image: registry.gitlab.propulsion-home.ch/full-stack/batch-16-may-2021/final-projects/octo:master
     env_file:
-      - .env/prod.env
+      - env/prod.env
     command: "sh /scripts/run.sh"
     volumes:
     - static-files:/static-files
@@ -17,7 +17,7 @@ services:
   postgres:
     image: postgres:latest
     env_file:
-      - .env/prod.env
+      - env/prod.env
     volumes:
     - postgres_volume:/var/lib/postgresql/data
 
