--- a/env/dev.env
+++ b/env/dev.env
@@ -6,9 +6,9 @@ POSTGRES_DB=postgres
 
 DJANGO_DEBUG=True
 
-DEFAULT_FROM_EMAIL=dev.propulsionteam5@gmail.com
+DEFAULT_FROM_EMAIL=octo.tournament@gmail.com
 EMAIL_USE_TLS=True
 EMAIL_HOST=smtp.gmail.com
-EMAIL_HOST_USER=dev.propulsionteam5@gmail.com
-EMAIL_HOST_PASSWORD=PropulsionTeam5
+EMAIL_HOST_USER=octo.tournament@gmail.com
+EMAIL_HOST_PASSWORD=MSt334ntuwAsiA3
 EMAIL_PORT=587
